tests/fixtures/svs-v3/invalid/malformed-content.hex
24520650071108036e646e08077370656331313436010314001512cd106e6f742d73746174652d766563746f7216031b010017201c7bad4dc41cb0b138dd3599088d9f63275a1fd9408891721b745baf3e8defc6
